--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -18,9 +18,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": "src",         
     "paths": {
-      "@/*": ["front-end/src/*"]
-    }
+      "@/*": ["*"]           
+    },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
